--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/SCSS/style.css">
+    <title>Document</title>
 </head>
 <body>
-$END$
+<h1>Hello</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem iusto mollitia porro quibusdam quidem quos reprehenderit similique! Adipisci ducimus magnam neque quasi quos! Ad eligendi excepturi, inventore numquam qui repellat?</p>
+
+<script src="app/script.js"></script>
 </body>
 </html>
