--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/SCSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/scss/style.css">
     <title>Document</title>
 </head>
 <body>
 <h1>Hello</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem iusto mollitia porro quibusdam quidem quos reprehenderit similique! Adipisci ducimus magnam neque quasi quos! Ad eligendi excepturi, inventore numquam qui repellat?</p>
-
 <script src="app/script.js"></script>
 </body>
 </html>
