--- a/index.html
+++ b/index.html
@@ -11,8 +11,24 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Hello</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem iusto mollitia porro quibusdam quidem quos reprehenderit similique! Adipisci ducimus magnam neque quasi quos! Ad eligendi excepturi, inventore numquam qui repellat?</p>
+<main>
+    <h1>Hello</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda aut distinctio, dolorum exercitationem
+        facilis laborum minima molestias perspiciatis, provident repudiandae, vero. Nesciunt nihil sequi totam veniam!
+        Adipisci aliquid architecto at deleniti, repellat vel vero. Dolore enim exercitationem fuga in, labore nostrum
+        perferendis quae quod temporibus velit. Accusantium aspernatur aut commodi, culpa debitis delectus dolor eius
+        enim eos esse, expedita facere facilis fugit hic illo incidunt ipsam maxime nam neque, nihil praesentium quia
+        reprehenderit similique sint tempore totam veritatis voluptates!</p>
+</main>
+<aside>
+    <h2>More info</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ducimus ea eligendi fuga inventore laboriosam
+        maxime, possimus! Consequatur dignissimos dolore est expedita explicabo hic id ipsam, itaque officiis optio
+        quidem rem saepe sequi, sit sunt! Consequatur impedit possimus quam recusandae unde. Accusantium deleniti
+        dignissimos dolorem, dolores earum ipsa itaque iure necessitatibus odio perferendis placeat quam, quasi
+        reprehenderit saepe velit vitae?</p>
+</aside>
+
 <script src="app/script.js"></script>
 </body>
 </html>
